--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -2,7 +2,11 @@
 <html lang="en">
 	<head>
 		<title> this is a test </title>
-		<meta> charset="utf-8">
+		<meta> charset="utf-8" </meta>
+		<p> this is a test for creating a paragraph </p>
+		<h1> this is large </h1>
+		<h3> this is medium </h3>
+		<h6> this is small </h6>
 	</head>
 	<body>
 	</body>
