--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -2,12 +2,15 @@
 <html lang="en">
 	<head>
 		<title> this is a test </title>
-		<meta> charset="utf-8" </meta>
-		<p> this is a test for creating a paragraph </p>
-		<h1> this is large </h1>
-		<h3> this is medium </h3>
-		<h6> this is small </h6>
+		<meta charset="utf-8">
 	</head>
 	<body>
+		<main>
+			<img src= "">
+			<p> this is a test for creating a paragraph </p>
+			<h1> this is large </h1>
+			<h3> this is medium </h3>
+			<h6> this is small </h6>
 	</body>
+	<footer> this is a footer </footer>
 </html>
