--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<main>
-			<img src= "">
+			<img src= "https://github.com/Spookster12/HTML-and-CSS-Projects/blob/main/HTML/sample%20img.jpg">
 			<p> this is a test for creating a paragraph </p>
 			<h1> this is large </h1>
 			<h3> this is medium </h3>
