--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -5,12 +5,14 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
+		<p> this is a test for creating a paragraph </p>
+		<h1> this is large </h1>
+		<h3> this is medium </h3>
+		<h6> this is small </h6>
 		<main>
-			<img src= "https://github.com/Spookster12/HTML-and-CSS-Projects/blob/main/HTML/sample%20img.jpg">
-			<p> this is a test for creating a paragraph </p>
-			<h1> this is large </h1>
-			<h3> this is medium </h3>
-			<h6> this is small </h6>
+			<img src= "sample img.jpg">
+			<a href="cliff.html">cliff image</a>
+		</main>
 	</body>
 	<footer> this is a footer </footer>
 </html>
