nav link update
added the navigation bar to go between all websites

--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -11,7 +11,12 @@
 		<h6> this is small </h6>
 		<main>
 			<img src= "sample img.jpg">
-			<a href="cliff.html">cliff image</a>
+			<nav>
+				<a href="assignment.html">home</a>
+				<a href="cliff.html">cliff</a>
+				<a href="https://www.google.com/imgres?q=ocean&imgurl=https%3A%2F%2Fthedaily.case.edu%2Fwp-content%2Fuploads%2F2023%2F06%2Funderwater-view.jpg&imgrefurl=https%3A%2F%2Fthedaily.case.edu%2F5-unsettling-facts-you-might-not-know-about-the-ocean%2F&docid=Zc0P0urD5_xmIM&tbnid=-T5fN2C2halCFM&vet=12ahUKEwih1cuwyYiPAxXB4MkDHaAYDZIQM3oECCgQAA..i&w=1400&h=600&hcb=2&ved=2ahUKEwih1cuwyYiPAxXB4MkDHaAYDZIQM3oECCgQAA">Ocean</a>
+				<a href="video.html">video</a>
+			</nav>
 		</main>
 	</body>
 	<footer> this is a footer </footer>
