--- a/HTML/video.html
+++ b/HTML/video.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> cliff </title>
+		<title> video </title>
 		<meta charset="utf-8">
 	</head>
 	<body>
 		<main>
-			<img src="sample img.jpg">
-			<nav>
+			<nav> 
 				<a href="assignment.html">Home</a>
 				<a href="cliff.html">cliff</a>
-				<a href="video.html">video</a>
+				<a href="https://youtu.be/dQw4w9WgXcQ?si=JH02mT5MZghDYiJW"> video</a>
 			</nav>
 		</main>
 	</body>
