--- a/HTML/assignment.html
+++ b/HTML/assignment.html
@@ -9,6 +9,7 @@
 		<h1> this is large </h1>
 		<h3> this is medium </h3>
 		<h6> this is small </h6>
+		<blockquote> Learn how to utilize the HTML blockquote element </blockquote>
 		<main>
 			<img src= "sample img.jpg">
 			<nav>
