--- a/HTML/video.html
+++ b/HTML/video.html
@@ -6,10 +6,13 @@
 	</head>
 	<body>
 		<main>
+		<iframe width="720" height="720"
+		src="https://youtu.be/dQw4w9WgXcQ?si=JH02mT5MZghDYiJW">
+		</iframe>
 			<nav> 
 				<a href="assignment.html">Home</a>
 				<a href="cliff.html">cliff</a>
-				<a href="https://youtu.be/dQw4w9WgXcQ?si=JH02mT5MZghDYiJW"> video</a>
+				<a href="https://youtu.be/dQw4w9WgXcQ?si=JH02mT5MZghDYiJW"> link to video</a>
 			</nav>
 		</main>
 	</body>
