--- a/HTML assignments/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/HTML assignments/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -5,9 +5,7 @@
 		<meta charset="utf-8">
 	</head>
 	<body>
-	<style>
-	h1 {color:red;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	<h1> test </h1>
 		<p><b><i><font color = yellow font="Arial" size=7>
 		testing </font></b></i></p>
