--- a/CSS assignments/Basic_HTML_Template.html
+++ b/CSS assignments/Basic_HTML_Template.html
@@ -13,7 +13,7 @@
 
         <div class="container">
             <div class="squares">
-                <o>box 1</p>
+                <p>Box 1</p>
             </div>
 
             <div class="squares">
