finished up challenges and downloaded student portfolio

--- a/One-Page Website/one_page_website.html
+++ b/One-Page Website/one_page_website.html
@@ -161,7 +161,7 @@
 							<form action="" method="post">
 								<input class="account" type="text" value="Name">
 								<input class="account" type="text" value="Email Address">
-								<input class="account" type="text" value="Phone Number"
+								<input class="account" type="text" value="Phone Number">
 								<div class="form-spacer">
 									<label class="terms">Terms and Conditions</label>
 								</div>
